snapshots/parsers/cst/enum_statements/enum_with_comments.snap
---
source: src/parsers/cst/enum_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: EnumStatement
      children:
        - kind: EnumKeyword
          text: Enum
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Priority
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: Low
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "0"
        - kind: Whitespace
          text: "      "
        - kind: EndOfLineComment
          text: "' Lowest priority"
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: Medium
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "5"
        - kind: Whitespace
          text: "   "
        - kind: EndOfLineComment
          text: "' Medium priority"
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: High
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "10"
        - kind: Whitespace
          text: "    "
        - kind: EndOfLineComment
          text: "' Highest priority"
        - kind: Newline
          text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: EnumKeyword
          text: Enum
        - kind: Newline
          text: "\n"
